--- a/http-utils/pom.xml
+++ b/http-utils/pom.xml
@@ -9,9 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.weiyiysw.module</groupId>
-    <artifactId>hex-utils</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>http-utils</artifactId>
 
 
 </project>
