--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.weiyiysw.module</groupId>
+    <groupId>com.weiyiysw</groupId>
     <artifactId>acen-utils</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <modules>
+        <module>hex-utils</module>
         <module>http-utils</module>
     </modules>
 
