--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.2.4.RELEASE</version>
+        <relativePath/> <!-- lookup parent from repository -->
+    </parent>
+
     <groupId>com.weiyiysw</groupId>
     <artifactId>acen-utils</artifactId>
     <packaging>pom</packaging>
@@ -11,6 +18,7 @@
     <modules>
         <module>hex-utils</module>
         <module>http-utils</module>
+        <module>quartz</module>
     </modules>
 
     <dependencyManagement>
@@ -20,12 +28,6 @@
             <!--            <artifactId>vertx-kafka-client</artifactId>-->
             <!--            <version>3.8.0</version>-->
             <!--        </dependency>-->
-
-            <dependency>
-                <groupId>org.apache.flink</groupId>
-                <artifactId>flink-core</artifactId>
-                <version>1.8.1</version>
-            </dependency>
         </dependencies>
     </dependencyManagement>
 
